--- a/site/assets/scss/_sidebar.scss
+++ b/site/assets/scss/_sidebar.scss
@@ -1,13 +1,5 @@
 .bd-sidebar {
-  @include media-breakpoint-down(md) {
-    margin: 0 calc(var(--bs-gutter-x) * -.5) 1rem; // stylelint-disable-line function-disallowed-list
-  }
-}
-
-.bd-links {
-  overflow: auto;
-
-  @include media-breakpoint-up(md) {
+  @include media-breakpoint-up(lg) {
     position: sticky;
     top: 5rem;
     // Override collapse behaviors
@@ -22,14 +14,11 @@
 }
 
 .bd-links-nav {
-  @include media-breakpoint-down(md) {
-    padding: 1.5rem 1.25rem;
+  @include media-breakpoint-down(lg) {
     font-size: .875rem;
-    background-color: $gray-100;
-    border-bottom: 1px solid $gray-200;
   }
 
-  @include media-breakpoint-between(xs, md) {
+  @include media-breakpoint-between(xs, lg) {
     column-count: 2;
     column-gap: 1.5rem;
 
@@ -46,7 +35,7 @@
 .bd-links-link {
   padding: .1875rem .5rem;
   margin-top: .125rem;
-  margin-left: 1.125rem;
+  margin-left: 1rem;
   color: rgba($black, .65);
   text-decoration: if($link-decoration == none, null, none);
 
