--- a/site/assets/scss/_content.scss
+++ b/site/assets/scss/_content.scss
@@ -2,12 +2,13 @@
 // Bootstrap docs content theming
 //
 
-// Offset for the sticky header
-:root {
-  scroll-padding-top: 5rem;
-}
-
 .bd-content {
+  // Offset content from fixed navbar when jumping to headings
+  > :target {
+    padding-top: 5rem;
+    margin-top: -5rem;
+  }
+
   > h2:not(:first-child) {
     margin-top: 3rem;
   }
