--- a/site/assets/scss/_navbar.scss
+++ b/site/assets/scss/_navbar.scss
@@ -12,6 +12,11 @@
     padding: 0;
     border: 0;
 
+    .bi {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+
     &:focus {
       box-shadow: none;
     }
