--- a/site/layouts/partials/docs-navbar.html
+++ b/site/layouts/partials/docs-navbar.html
@@ -15,7 +15,7 @@
 
     <div class="d-flex d-lg-none order-3">
       <button class="navbar-toggler p-2" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
-        <svg class="bi" width="24" height="24"><use xlink:href="#three-dots"></use></svg>
+        <svg class="bi" width="24" height="24" aria-hidden="true"><use xlink:href="#three-dots"></use></svg>
       </button>
     </div>
 
