--- a/site/assets/scss/_component-examples.scss
+++ b/site/assets/scss/_component-examples.scss
@@ -317,7 +317,7 @@
 .highlight {
   padding: .75rem ($bd-gutter-x * .5);
   margin-bottom: 1rem;
-  background-color: $gray-100;
+  background-color: var(--bs-gray-100);
 
   @include media-breakpoint-up(md) {
     padding: .75rem 1.5rem;
