--- a/site/layouts/partials/scripts.html
+++ b/site/layouts/partials/scripts.html
@@ -9,6 +9,10 @@
 <script src="https://cdn.jsdelivr.net/npm/@stackblitz/sdk@1/bundles/sdk.umd.js"></script>
 {{- end }}
 
+{{ if eq .Page.Layout "single" -}}
+<script src="https://cdn.jsdelivr.net/npm/@stackblitz/sdk@1/bundles/sdk.umd.js"></script>
+{{- end }}
+
 {{- $vendor := resources.Match "js/vendor/*.js" -}}
 {{- $js := resources.Match "js/*.js" -}}
 {{- $targetDocsJSPath := path.Join "/docs" .Site.Params.docs_version "assets/js/docs.js" -}}
@@ -68,5 +72,67 @@ ${htmlSnippet.replace(/^/gm, '    ')}
 
     StackBlitzSDK.openProject(project, { openFile: 'index.html' })
   }
+</script>
+{{- end }}
+
+{{ if eq .Page.Layout "single" -}}
+<script>
+  // Open in StackBlitz logic
+  document.querySelectorAll('.btn-edit').forEach(btn => {
+    btn.addEventListener('click', event => {
+      const exampleRef = event.target.closest('.btn-edit').getAttribute('data-sb-js-snippet')
+      StackBlitzSDK.openBootstrapSnippet(exampleRef)
+    })
+
+    StackBlitzSDK.openBootstrapSnippet = async (exampleRef) => {
+      const exampleMarkup = "../examples/" + exampleRef + "/index.html"
+      let markup
+      let jsSnippet = 'import \'./style.css\';'
+      
+      await fetch(exampleMarkup)
+        .then(response => response.text())
+        .then(text => markup = text)
+
+      let d = document.createElement('html')
+      d.innerHTML = markup
+      console.log(d.querySelector('body'))
+
+      const exampleCSS = d.querySelector('style').innerHTML
+
+      // Get CSS file
+      const css = "../examples/" + exampleRef + "/" + exampleRef + ".css"
+      let cssContent
+      await fetch(css)
+        .then(response => response.text())
+        .then(text => cssContent = text)
+
+      const t = `<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{{ .Site.Params.cdn.css }}" rel="stylesheet">
+    <title>Bootstrap Example</title>
+    <${'script'} src="{{ .Site.Params.cdn.js_bundle }}"></${'script'}>
+  </head>
+  ${d.querySelector('body').innerHTML}
+  </body>
+</html>`
+
+      const project = {
+        files: {
+          'index.html': t,
+          'index.js': jsSnippet,
+          'style.css': exampleCSS + cssContent,
+        },
+        title: 'Bootstrap Example',
+        description: `Official example from ${window.location.href}`,
+        template: 'javascript',
+        tags: ['bootstrap']
+      }
+
+      StackBlitzSDK.openProject(project, { openFile: 'index.html' })
+    }
+  })
 </script>
 {{- end }}
