--- a/site/layouts/partials/scripts.html
+++ b/site/layouts/partials/scripts.html
@@ -124,7 +124,7 @@ ${htmlSnippet.replace(/^/gm, '    ')}
       }
 
       // Get HTML content
-      let htmlContent = d.querySelector('body').innerHTML.replaceAll('"/docs/5.', '"https://getbootstrap.com/docs/5.')
+      let htmlContent = d.querySelector('body').outerHTML.replaceAll('"/docs/5.', '"https://getbootstrap.com/docs/5.')
 
       // Special use case to handle images from Heroes example
       htmlContent = htmlContent.replaceAll('src="bootstrap-', 'src="https://getbootstrap.com/docs/5.2/examples/' + exampleRef + '/bootstrap-')
